--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,1 @@
-Andrea Bulgarelli <bulgarelli@iasfbo.inaf.it>
-Andrea Zoli <zoli@iasfbo.inaf.it>
+Software Coordinator: Andrea Bulgarelli <andrea.bulgarelli@inaf.it>
